testing my training sets

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Brume_Branch_Bounce_TSP</name>
+	<name>Brume_Branch_Bound_TSP</name>
 	<comment></comment>
 	<projects>
 	</projects>
